# SegVeg

./: Dockerfile  Jenkinsfile  MANIFEST.in  Makefile  README.md  VegAnn_+_SegVeg.ipynb  inra4p.build.groovy  pylintrc  pyproject.toml  requirements.txt  setup.cfg  setup.py
config/: yellowConfiguration.json
docs/: Makefile  README.md  make.bat
docs/DATA/: LABELLED_PIXELS.csv  XGBoost  model_scikit
docs/source/: cli.rst  conf.py  index.rst  inputformats.rst  outputformats.rst  qualityassessment.rst  quickstart.rst
docs/source/_static/: theme_overrides.css
src/yellowgreenmulti/: version.py  yellowgreenmultiutils.py
src/yellowgreenmulti.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
