[metadata]
name = yellowgreenmulti
description = yellowgreen-multi
long_description = 
url =
author = INRAE
license = Proprietary
classifiers =
	Environment :: Console
	License :: Other/Proprietary License
	Programming Language :: Python :: 3 :: Only
	Private :: Do not Upload

[options]
include_package_data = True
install_requires =
python_requires = >=3.7, <4
setup_requires = setuptools_scm>=3.3

[options.entry_points]
console_scripts = yellowgreen-multi = yellowgreenmulti.cli:main

[options.extras_require]
dev =
	pylint>2
	m2r2>=0.2.6
	sphinx>=3.2
	sphinxcontrib-autoprogram
	sphinx_rtd_theme>=0.5
